# scr/routes/comments.ts
@@ -4,14 +4,6 @@ import isUser from '../middlewares/isUser';
 
 const router = express.Router();
 
-/**
- * @swagger
- * tags:
- *   - name: comment
- *     description: Endpoints related to comment
- */
-
-
 router.post('/add/:id', isUser, add);
 router.put('/update/:id', isUser, update);
 router.delete('/delete/:id', isUser, delete1);
